fixed alignment on experiment results

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -462,7 +462,7 @@ pre {
     }
     td,
     th {
-      vertical-align: top;
+      vertical-align: middle;
     }
     th:first-child {
       background: #fff;
